--- a/2º Projeto/css/style.css
+++ b/2º Projeto/css/style.css
@@ -66,8 +66,8 @@ div.navegacao{
 }
 
 div.navegacao .container{
-    height: 70px;
-    padding: 0 2%;
+    /*height: 70px;*/
+    padding: 10px 2%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -75,23 +75,31 @@ div.navegacao .container{
 }
 
 nav.menu-pc ul{
-    flex: 2 1 0;
+    /*flex: 2 1 0;*/
     display: flex;
     flex-wrap: wrap;
     margin-right: 30px;
 }
 
 .menu-pc ul li{
-    margin: 0 10px;
+    margin: 10px;
+}
+
+.menu-pc ul li:first-child{
+    margin-left: 0;
 }
 
 .menu-pc ul a{
     color: rgb(53, 52, 52);
-    font-size: 1.2em;
+    font-size: 1em;
     text-transform: uppercase;
     padding: 5px 0;
 }
 
 input[type="search"]{
-    flex: 1 1 50px;
+    /*flex: 1 1 50px;*/
+    min-width: 250px;
+    max-height: 40px;
+    padding-left: 10px;
+    outline: none;
 }
