--- a/2º Projeto/css/style.css
+++ b/2º Projeto/css/style.css
@@ -93,7 +93,13 @@ nav.menu-pc ul{
     color: rgb(53, 52, 52);
     font-size: 1em;
     text-transform: uppercase;
-    padding: 5px 0;
+    padding: 20px 0;
+    transition: .3s;
+}
+
+.menu-pc ul a:hover{
+    color: #00bac6;
+    border-bottom: 3px solid #00bac6;
 }
 
 input[type="search"]{
