--- a/2º Projeto/css/style.css
+++ b/2º Projeto/css/style.css
@@ -131,7 +131,55 @@ section.sessao-apresenta{
     width: 100%;
 }
 
-div.slider img{
+.img-cfg{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 700px;
+}
+
+div.img1{
+    background-image: url('../img/banner1.jpg');
+}
+
+div.img2{
+    background-image: url('../img/banner2.jpg');
+}
+
+/*div.slider img{
     max-width: 100%;
     height: 700px;
+}*/
+
+/*---Estilizando botoes de troca de img---*/
+button.slick-prev{
+    font-size: 0px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    outline: none;
+    background-color: transparent;
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    background-image: url('../img/arrow-circle-left-solid.svg');
+    cursor: pointer;
+}
+
+button.slick-next{
+    font-size: 0px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    outline: none;
+    background-color: transparent;
+    background-image: url('../img/arrow-circle-right-solid.svg');
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
 }
