--- a/2º Projeto/css/style.css
+++ b/2º Projeto/css/style.css
@@ -153,7 +153,7 @@ div.img2{
 }*/
 
 /*---Estilizando botoes de troca de img---*/
-button.slick-prev{
+button.slick-arrow{
     font-size: 0px;
     border: none;
     width: 50px;
@@ -162,24 +162,18 @@ button.slick-prev{
     background-color: transparent;
     position: absolute;
     z-index: 5;
+    cursor: pointer;
+    transform: translate(-50%, -50%);
+}
+
+button.slick-prev{
     top: 50%;
     left: 10%;
-    transform: translate(-50%, -50%);
     background-image: url('../img/arrow-circle-left-solid.svg');
-    cursor: pointer;
 }
 
 button.slick-next{
-    font-size: 0px;
-    border: none;
-    width: 50px;
-    height: 50px;
-    outline: none;
-    background-color: transparent;
     background-image: url('../img/arrow-circle-right-solid.svg');
-    position: absolute;
     top: 50%;
-    right: 10%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
+    right: 8%;
 }
