--- a/2º Projeto/css/style.css
+++ b/2º Projeto/css/style.css
@@ -177,3 +177,33 @@ button.slick-next{
     top: 50%;
     right: 8%;
 }
+
+ul.slick-dots{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+ul.slick-dots li{
+    margin: 0 10px;
+}
+
+.slick-dots li button{
+    margin: 0;
+    width: 20px;
+    height: 20px;
+    border: 3px solid rgb(61, 60, 60);
+    border-radius: 50%;
+    font-size: 0px;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+li.slick-active button{
+    background-color: #00bac6;
+}
