--- a/4º Projeto/css/style.css
+++ b/4º Projeto/css/style.css
@@ -135,5 +135,52 @@ section#servicos div{
 }
 
 section#servicos div img{
-    width: 100px;
+    width: 80px;
+}
+
+/*---Portifolio---*/
+section#portifolio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+}
+
+section#portifolio img{
+    max-width: 100%;
+    margin-top: 30px;
+}
+
+/*Contato*/
+section#contato{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+    text-align: center;
+}
+
+#contato div img{
+    width: 30px;
+}
+
+#contato div{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#contato div a{
+    color: #4d4d4d;
+}
+
+/*---Footer---*/
+footer{
+    width: 100%;
+    padding: 20px 2%;
+    background-color: #4d4d4d;
+    color: white;
+    text-align: center;
+    margin-top: 10px;
 }
